# summarize

./: README.md  pyproject.toml  summarize.py
