[tool.poetry]
name = "summarize"
version = "0.1.0"
description = "A recursive text summarizing script."
authors = ["Wolfsauge"]
license = "MIT"
readme = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.11"
icecream = "^2.1.3"
transformers = "^4.35.0"
langchain = "^0.0.330"
torch = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
